Add created_at property to tweet type
- Add transforms for bulk uploader
    - Necessary for importing tweets since 'created_at' is required
- Extract 'created_at' from twitter request

--- a/bulkloader.yaml
+++ b/bulkloader.yaml
@@ -68,6 +68,10 @@ transformers:
       external_name: text
       # Type: String Stats: 6 properties of this type in this kind.
 
+    - property: created_at
+      external_name: created_at
+      import_transform: transform.import_date_time("%a %b %d %H:%M:%S +0000 %Y")
+      export_transform: transform.import_date_time("%a %b %d %H:%M:%S +0000 %Y")
 
 - kind: Vote
   connector: csv
